--- a/src/Lab1Tp6/vistas/ConsultaNombre.form
+++ b/src/Lab1Tp6/vistas/ConsultaNombre.form
@@ -92,6 +92,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtCaracteres">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtCaracteresKeyReleased"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
